fix spacing in welcome section on mobile

--- a/index.css
+++ b/index.css
@@ -371,8 +371,7 @@ footer p {
 	}
 
 	#welcome-section {
-		padding-top: 11rem;
-		gap: 3rem;
+		padding-top: 9rem;
 	}
 
 	#portrait {
